--- a/src/shared/ui/NavBar.module.css
+++ b/src/shared/ui/NavBar.module.css
@@ -7,7 +7,7 @@
   border-bottom: 1px solid #333;
   position: sticky;
   top: 0;
-  z-index: 1000;
+  z-index: 100005;
   height: 4.5rem;
 }
 
